Installing leaflet types.

--- a/client-src/src/app/components/main/customer/customer.component.html
+++ b/client-src/src/app/components/main/customer/customer.component.html
@@ -21,7 +21,7 @@
             <app-loyal-customers></app-loyal-customers>
           </div>
           <li class="nav-item">
-            <a class="nav-link active" href="#">
+            <a class="nav-link" href="#">
               <i class="fa fa-bar-chart" aria-hidden="true"></i>
               Dashboard
               <span class="sr-only">(current)</span>
