--- a/client-src/src/app/components/main/customer/loyal-customers/loyal-customers.component.html
+++ b/client-src/src/app/components/main/customer/loyal-customers/loyal-customers.component.html
@@ -1,10 +1,10 @@
 <li class="nav-item">
-  <a class="nav-link" data-toggle="collapse" data-target="#loyal" aria-expanded="true" aria-controls="collapseOne">
+  <a class="nav-link" data-toggle="collapse" data-target="#loyal" aria-expanded="false" aria-controls="collapseOne">
     <i class="fa fa-heart" aria-hidden="true"></i>
     Loyal Customers
   </a>
 </li>
-<div id="loyal" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+<div id="loyal" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
   <div class="card-body">
     <form>
       <div class="form-group">
