--- a/client-src/src/app/components/main/customer/target-segment/target-segment.component.html
+++ b/client-src/src/app/components/main/customer/target-segment/target-segment.component.html
@@ -1,10 +1,10 @@
 <li class="nav-item">
-  <a class="nav-link" data-toggle="collapse" data-target="#target" aria-expanded="true" aria-controls="collapseOne">
+  <a class="nav-link" data-toggle="collapse" data-target="#target" aria-expanded="false" aria-controls="collapseOne">
     <i class="fa fa-bullseye" aria-hidden="true"></i>
     Target Segment
   </a>
 </li>
-<div id="target" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+<div id="target" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
   <div class="card-body">
     <form>
       <div class="form-group">
