--- a/client-src/src/app/components/main/map/map.component.html
+++ b/client-src/src/app/components/main/map/map.component.html
@@ -1,1 +1,1 @@
-<div class="my-4 w-100" id="mapid" width="900" height="380"></div>
+<div (click)='onMapClick($event)' class="my-4 w-100" id="mapid" width="900" height="380"></div>
