--- a/client-src/src/app/components/main/branches/add/add.component.html
+++ b/client-src/src/app/components/main/branches/add/add.component.html
@@ -5,6 +5,6 @@
   <br/>
       <label for="lname">Branch Location</label>
       <input type="text" id="lname" name="lname" placeholder="Your Branch Location..">
-       <input type="submit" value="Add">
+       <input class="btn btn-primary" type="submit" value="Add">
     </form>
   </div>
