--- a/client-src/src/app/components/main/branches/add/add.component.css
+++ b/client-src/src/app/components/main/branches/add/add.component.css
@@ -8,7 +8,7 @@ input[type=text]{
     box-sizing: border-box;
 }
 
-input[type=submit] {
+/* input[type=submit] {
     width: 100%;
     background-color: #4CAF50;
     color: white;
@@ -17,10 +17,10 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
+} */
 
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color:RoyalBlue;
 }
 
 div {
