--- a/client-src/src/app/components/main/branches/branches.component.css
+++ b/client-src/src/app/components/main/branches/branches.component.css
@@ -1,4 +1,4 @@
-.btn {
+/* .btn {
     background-color: DodgerBlue; 
     border: none; 
     color: white; 
@@ -11,7 +11,7 @@
 .btn:hover {
     background-color: RoyalBlue;
     content: 'Add'
-}
+} */
 label.btn-secondary {
     border-radius: 50%;
     margin:10px;
