--- a/client-src/src/app/components/main/branches/remove/remove.component.css
+++ b/client-src/src/app/components/main/branches/remove/remove.component.css
@@ -7,7 +7,7 @@ select {
     border-radius: 4px;
     box-sizing: border-box;
 }
-input[type=submit] {
+/* input[type=submit] {
     width: 100%;
     background-color: #4CAF50;
     color: white;
@@ -16,10 +16,10 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
+} */
 
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: royalblue;
 }
 
 div {
