--- a/client-src/src/app/components/main/branches/remove/remove.component.html
+++ b/client-src/src/app/components/main/branches/remove/remove.component.html
@@ -8,6 +8,6 @@
         <option value="Adidas3">Adidas3</option>
       </select>
     
-      <input type="submit" value="Remove">
+      <input  class="btn btn-primary" type="submit" value="Remove">
     </form>
   </div>
