GET Method Competitors, Users, Factories, Orders.

--- a/client-src/src/app/components/main/main.component.html
+++ b/client-src/src/app/components/main/main.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<app-router></app-router>
 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
     <app-map></app-map>
 </main>
