--- a/client-src/src/app/components/main/branches/branches.component.html
+++ b/client-src/src/app/components/main/branches/branches.component.html
@@ -1,4 +1,8 @@
-<app-main></app-main>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+    <app-brmap></app-brmap>
+</main>
 <div class="container-fluid">
   <div class="row">
     <nav class="col-md-2 d-none d-md-block bg-light sidebar">
