--- a/client-src/src/app/components/main/branches/add/add.component.html
+++ b/client-src/src/app/components/main/branches/add/add.component.html
@@ -1,17 +1,16 @@
 <div>
     <form #f="ngForm" (ngSubmit)="onAddSubmit(f)">
       <label for="bname">Branch Name</label>
-      <input ng-model="name" type="text" id="fname" name="name" [ngModel]="br?.name" #brName="ngModel" placeholder="Your Branch name..">
+      <input ng-model="name" type="text" id="fname" name="name" [ngModel]="name" #brName="ngModel" placeholder="Your Branch name..">
       <br/>
       <label for="lname">Branch Code</label>
-      <input type="text" id="code" name="branch_code" [ngModel]="br?.code" #code="ngModel" placeholder="Your Branch Code..">
+      <input type="text" id="code" name="branch_code" [ngModel]="code" #brCode="ngModel" placeholder="Your Branch Code..">
       <br/>
       <label for="lname">City</label>
-      <input type="text" id="city" name="city" [ngModel]="br?.city" #city="ngModel" placeholder="Your Branch City..">
+      <input type="text" id="city" name="city" [ngModel]="city" #brCity="ngModel" placeholder="Your Branch City..">
       <br/>
       <label for="lname">Branch Location</label>
-      <input type="text" id="lname" name="branch_location" [ngModel]="br?.location" #brLocation="ngModel" placeholder="Your Branch Location..">      
-      
+      <input type="text" id="lname" name="branch_location" [ngModel]="location" #brLocation="ngModel" placeholder="Your Branch Location..">            
       <input class="btn btn-primary" type="submit" value="Add">
     </form>
   </div>
