--- a/client-src/src/app/components/main/advertisment/advertisment.component.html
+++ b/client-src/src/app/components/main/advertisment/advertisment.component.html
@@ -1,25 +1,25 @@
 <app-navbar></app-navbar>
-<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+<main role="main" class="col-md-9 ml-sm-auto col-lg-9 px-4">
   <div class="my-4 w-100" id="mapid" width="900" height="380"></div>
 </main>
 <div class="container-fluid">
   <div class="row">
-    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+    <nav class="col-md-3 d-md-block bg-light sidebar">
       <div class="sidebar-sticky">
         <ul class="nav flex-column">
-          <li class="nav-item">
+          <li class="list-group-item">
             <a class="nav-link" href="#">
               <i class="fa fa-bullhorn" aria-hidden="true"></i>
               Advertisment
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" (click) = "onClick()">
+          <li class="list-group-item">
+            <a class="nav-link" (click)="onClick()">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               Pin Point
             </a>
           </li>
-          <li class="nav-item">
+          <li class="list-group-item">
             <a class="nav-link" href="#">
               <i class="fa fa-bar-chart" aria-hidden="true"></i>
               Dashboard
@@ -28,7 +28,5 @@
         </ul>
       </div>
     </nav>
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-    </main>
   </div>
 </div>
