--- a/client-src/src/app/components/main/expansion/expansion.component.html
+++ b/client-src/src/app/components/main/expansion/expansion.component.html
@@ -1,51 +1,53 @@
-<app-main></app-main>
+<app-navbar></app-navbar>
+<main role="main" class="col-md-9 ml-sm-auto col-lg-9 px-4">
+  <div class="my-4 w-100" id="mapid" width="900" height="380"></div>
+</main>
 <div class="container-fluid">
   <div class="row">
-    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+    <nav class="col-md-3 d-none d-md-block bg-light sidebar">
       <div class="sidebar-sticky">
         <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
+          <li class="list-group-item">
+            <a class="nav-link">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               Best Location for:-
             </a>
-          </li>
-          <form>
-            <div class="form-group">
-              <div class="btn-group-toggle" data-toggle="buttons">
-                <label title="{{expansionType.name}}" *ngFor='let expansionType of expansionTypes' class="circle btn btn-secondary btn-outline-primary">
-                  <input [value]="expansionType.id" type="radio" autocomplete="off">
-                  <i class="fa fa-{{expansionType.class}}" aria-hidden="true"></i>
-                </label>
+            <form>
+              <div class="form-group">
+                <div class="btn-group-toggle" data-toggle="buttons">
+                  <label title="{{expansionType.name}}" *ngFor='let expansionType of expansionTypes' class="circle btn btn-secondary btn-outline-primary">
+                    <input [value]="expansionType.id" type="radio" autocomplete="off">
+                    <i class="fa fa-{{expansionType.class}}" aria-hidden="true"></i>
+                  </label>
+                </div>
               </div>
-            </div>
-          </form>
-          <li class="nav-item">
+            </form>
+          </li>
+          <li class="list-group-item">
             <a class="nav-link" data-toggle="collapse" data-target="#selectMethod" aria-expanded="true" aria-controls="collapseOne">
               <i class="fa fa-bullseye" aria-hidden="true"></i>
-              Select Location
+              Selection methods:-
             </a>
-          </li>
-          <form>
-            <div class="form-group">
-              <div class="btn-group-toggle" data-toggle="buttons">
-                <label title="{{selectionType.name}}" *ngFor='let selectionType of selectionTypes' class="circle btn btn-secondary btn-outline-primary">
-                  <input [value]="selectionType.id" type="radio" autocomplete="off">
-                  <i class="fa fa-{{selectionType.class}}" aria-hidden="true"></i>
-                </label>
+            <form>
+              <div class="form-group">
+                <div class="btn-group-toggle" data-toggle="buttons">
+                  <label title="{{selectionType.name}}" *ngFor='let selectionType of selectionTypes' class="circle btn btn-secondary btn-outline-primary">
+                    <input [value]="selectionType.id" type="radio" autocomplete="off">
+                    <i class="fa fa-{{selectionType.class}}" aria-hidden="true"></i>
+                  </label>
+                </div>
               </div>
-            </div>
-          </form>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-              Add:
-            </a>
+            </form>
           </li>
-          <form>
-            <div class="form-group">
-              <div>
-                <input type="text" id="Fname" name="name" [ngModel]="br?.name" #brName="ngModel" placeholder="Enter the name:">
+          <li class="list-group-item">
+            <a class="nav-link">
+              <i class="fa fa-map-marker" aria-hidden="true"></i>
+              Add:-
+            </a>
+            <form>
+              <div class="form-group">
+                <div>
+                  <input type="text" id="Fname" name="name" [ngModel]="br?.name" #brName="ngModel" placeholder="Enter the name:">
                 </div>
                 <div class="btn-group-toggle" data-toggle="buttons">
                   <label title="{{addexpansion.name}}" *ngFor='let addexpansion of addexpansions' class="circle btn btn-secondary btn-outline-primary">
@@ -53,10 +55,11 @@
                     <i class="fa fa-{{addexpansion.class}}" aria-hidden="true"></i>
                   </label>
                 </div>
-            </div>
-          </form>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
+              </div>
+            </form>
+          </li>
+          <li class="list-group-item">
+            <a class="nav-link">
               <i class="fa fa-bar-chart" aria-hidden="true"></i>
               Dashboard
               <span class="sr-only">(current)</span>
@@ -65,8 +68,5 @@
         </ul>
       </div>
     </nav>
-
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-    </main>
   </div>
 </div>
