--- a/client-src/src/app/components/main/main.component.css
+++ b/client-src/src/app/components/main/main.component.css
@@ -11,8 +11,22 @@
 /*
  * Sidebar
  */
+ @media (max-width: 768px) {
+  .sidebar {
+    text-align: center;
+    display: block;
+    position: relative !important; 
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100; /* Behind the navbar */
+    padding: 48px 0 0; /* Height of navbar */
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  }
+ }
 
 .sidebar {
+  display: inline;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -27,7 +41,7 @@
   top: 0;
   height: calc(100vh - 48px);
   padding-top: .5rem;
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
 
