--- a/client-src/src/app/components/main/navbar/navbar.component.html
+++ b/client-src/src/app/components/main/navbar/navbar.component.html
@@ -1,13 +1,23 @@
-<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main">Geomarketing</a>
-  <ul class="navbar-nav px-3"></ul>
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main/customer"><i class="fa fa-users" aria-hidden="true"></i> Customers</a>
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main/expansion"><i class="fa fa-expand" aria-hidden="true"></i> Expansion</a>
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main/branches"><i class="fa fa-building-o" aria-hidden="true"></i> Branches</a>
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main/ads"><i class="fa fa-bullhorn" aria-hidden="true"></i> Advertisments</a>
-  <ul class="navbar-nav px-3">
-    <li class="nav-item text-nowrap">
-      <a class="nav-link" href="#"><i class="fa fa-sign-out" aria-hidden="true"></i> Sign out</a>
-    </li>
-  </ul>
+<nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+  <a class="navbar-brand" href="main">Geomarketing</a>
+  <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="navbar-collapse offcanvas-collapse col-md-9 ml-sm-auto col-lg-10" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="main/customer"><i class="fa fa-users" aria-hidden="true"></i> Customers</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="main/expansion"><i class="fa fa-expand" aria-hidden="true"></i> Expansions</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="main/branches"><i class="fa fa-building-o" aria-hidden="true"></i> Branches</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="main/ads"><i class="fa fa-bullhorn" aria-hidden="true"></i> Advertisments</a>
+      </li>
+    </ul>
+  </div>
 </nav>
