--- a/client-src/src/app/components/main/expansion/expansion.component.css
+++ b/client-src/src/app/components/main/expansion/expansion.component.css
@@ -1,8 +1,9 @@
 input[type=text]{
-   
     padding: 9px 9px;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
-   
+}
+#mapid {
+    height: 750px;
 }
