--- a/client-src/src/app/components/main/branches/remove/remove.component.html
+++ b/client-src/src/app/components/main/branches/remove/remove.component.html
@@ -1,4 +1,12 @@
-<div>
+
+    <li class="nav-item">
+        <a class="nav-link" data-toggle="collapse" data-target="#target" aria-expanded="false" aria-controls="collapseOne">
+            <i class="fa fa-trash-o" aria-hidden="true"></i>
+          Remove Branch:
+        </a>
+      </li>
+      <div id="target" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+      <div class="card-body">
     <form>
   
       <label for="country">Branch Name</label>
@@ -11,3 +19,5 @@
       <input  class="btn btn-primary" type="submit" value="Remove">
     </form>
   </div>
+</div>
+ 
