--- a/client-src/src/app/components/main/map/map.component.html
+++ b/client-src/src/app/components/main/map/map.component.html
@@ -1,1 +1,2 @@
 <div class="my-4 w-100" id="mapid" width="900" height="380"></div>
+<div class="my-4 w-100" id="dmap" width="900" height="380"></div>
