--- a/client-src/src/app/components/main/branches/branches.component.html
+++ b/client-src/src/app/components/main/branches/branches.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
 <main role="main" class="col-md-9 ml-sm-auto col-lg-9 px-4">
-  <app-brmap></app-brmap>
+  <div class="my-4 w-100" id="bmap" width="900" height="380"></div>
 </main>
 <div class="container-fluid">
   <div class="row">
@@ -14,21 +14,15 @@
 
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/main/branches/add">
-              <button class="circle btn btn-secondary btn-outline-primary" (click)='onSubmit(f)' routerLink='/main/branches/add.component'>
-
-
-                <i class="fa fa-plus fa-lg" aria-hidden="true"></i>
-              </button>
-            </a>
-            <a class="nav-link" href="/main/branches/remove">
-              <button class="circle btn btn-secondary btn-outline-primary" (click)='onSubmit(f)' routerLink='/main/branches/remove/remove'>
-                <i class="fa fa-trash-o fa-lg" aria-hidden="true"></i>
-              </button>
-            </a>
-
-          </li>
+              
+         <app-add></app-add>
+                
+         <app-remove  ></app-remove>
+           
+          
+         
+       
+        
           <li class="nav-item">
             <a class="nav-link" href="#">
               <i class="fa fa-user-secret" aria-hidden="true"></i>
