--- a/client-src/src/app/components/main/navbar/navbar.component.html
+++ b/client-src/src/app/components/main/navbar/navbar.component.html
@@ -18,6 +18,9 @@
       <li class="nav-item">
         <a class="nav-link" href="main/ads"><i class="fa fa-bullhorn" aria-hidden="true"></i> Advertisments</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="branduser/index"><i class="fa fa-users" aria-hidden="true"></i> Brand User</a>
+      </li>
     </ul>
   </div>
 </nav>
