--- a/client-src/src/app/components/branduser/usernavbar/usernavbar.component.html
+++ b/client-src/src/app/components/branduser/usernavbar/usernavbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+<!-- <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
   <a class="logo" href="#">
     <img src=".'../../../../assets/img/logo.png" alt="">
   </a>
@@ -49,4 +49,4 @@
       </li>
     </ul>
   </div>
-</nav>
+</nav> -->
