--- a/client-src/src/app/components/main/customer/customer.component.html
+++ b/client-src/src/app/components/main/customer/customer.component.html
@@ -8,13 +8,13 @@
       <div class="sidebar-sticky">
         <ul class="nav flex-column">
           <li class="list-group-item">
-            <a class="nav-link">
+            <a class="nav-link" >
               <i class="fa fa-users" aria-hidden="true"></i>
               Current Customers
             </a>
           </li>
           <li class="list-group-item">
-            <a class="nav-link">
+            <a class="nav-link" (click)="onClick()">
               <i class="fa fa-user-plus" aria-hidden="true"></i>
               Potential Customers
             </a>
