--- a/client-src/src/app/components/main/branches/remove/remove.component.html
+++ b/client-src/src/app/components/main/branches/remove/remove.component.html
@@ -1,11 +1,11 @@
 
     <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" data-target="#target" aria-expanded="false" aria-controls="collapseOne">
+        <a class="nav-link" data-toggle="collapse" data-target="#remove" aria-expanded="false" aria-controls="collapseOne">
             <i class="fa fa-trash-o" aria-hidden="true"></i>
           Remove Branch:
         </a>
       </li>
-      <div id="target" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+      <div id="remove" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
       <div class="card-body">
     <form>
   
