--- a/client-src/src/app/components/main/customer/customer.component.html
+++ b/client-src/src/app/components/main/customer/customer.component.html
@@ -19,8 +19,57 @@
               Potential Customers
             </a>
           </li>
-          <li id="accordion">
-            <app-target-segment class="list-group-item"></app-target-segment>
+          <li id="accordion" class="list-group-item">
+              <a class="nav-link" data-toggle="collapse" data-target="#target" aria-expanded="false" aria-controls="collapseOne">
+                <i class="fa fa-bullseye" aria-hidden="true"></i>
+                Target Segment
+              </a>
+            <div id="target" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+              <div class="card-body">
+                <form (ngSubmit)="onSubmit()">
+                  <div class="form-group">
+                    <label for="age">Age</label>
+                    <div id="age" class="form-check">
+                      <div *ngFor="let ageRange of ageRanges">
+                        <label class="form-check-label">
+                          <input class="form-check-input" (change)="change(ageRange)" [value]="ageRange.id" type="checkbox" autocomplete="off"> {{ ageRange.name }}
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="gender">Gender</label>
+                    <div id="gender" class="btn-group-toggle" data-toggle="buttons">
+                      <label *ngFor="let gender of genderTypes" (click)="change(gender)" class="circle btn btn-secondary btn-outline-primary">
+                        <input class="form-check-input" [value]="gender.id" type="checkbox" autocomplete="off">
+                        <i class="fa fa-{{gender.class}}" aria-hidden="true"></i>
+                      </label>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="educationLevel">Education Level</label>
+                    <div id="educationLevel" class="form-check">
+                      <div *ngFor="let eduLevel of eduLevels">
+                        <label class="form-check-label">
+                          <input class="form-check-input" (change)="change(eduLevel)" [value]="eduLevel.id" type="checkbox" autocomplete="off"> {{ eduLevel.name }}
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="incomeLevel">Income Level</label>
+                    <div id="incomeLevel" class="form-check">
+                      <div *ngFor="let incomeLevel of incomeLevels">
+                        <label class="form-check-label">
+                          <input class="form-check-input" (change)="change(incomeLevel)" [value]="incomeLevel.id" type="checkbox" autocomplete="off"> {{ incomeLevel.name }}
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+              </div>
+            </div>
           </li>
           <li id="accordion2">
             <app-loyal-customers class="list-group-item"></app-loyal-customers>
@@ -40,11 +89,11 @@
                       <i class="fa fa-plus fa-lg" aria-hidden="true"></i>
                     </button>
                   </a>
-                
-                    <button class="circle btn btn-secondary btn-outline-primary" (click)='onSubmit(f)' routerLink='/main/customer/removecustomer'>
-                      <i class="fa fa-trash-o fa-lg" aria-hidden="true"></i>
-                    </button>
-                  
+
+                  <button class="circle btn btn-secondary btn-outline-primary" (click)='onSubmit(f)' routerLink='/main/customer/removecustomer'>
+                    <i class="fa fa-trash-o fa-lg" aria-hidden="true"></i>
+                  </button>
+
                 </form>
               </div>
             </div>
